clap_derive/tests/ui/parse_not_zero_args.stderr
error: parse must have exactly one argument
  --> $DIR/parse_not_zero_args.rs:14:12
   |
14 |     #[clap(parse(from_str, from_str))]
   |            ^^^^^
